--- a/views/index.html
+++ b/views/index.html
@@ -7,56 +7,83 @@
 </head>
 <body>
 
-    <header class="banner">
-        <h1>The WT</h1>
-    </header>
+<header class="banner">
+    <h1>The WT</h1>
+</header>
 
-    <div class="content">
+<div class="content">
 
-        <p>These URLs return JSON responses:</p>
-        <ul>
-            <li><a href="/products">List of Products</a></li>
-            <li><a href="/cart">Contents of Cart</a></li>
-        </ul>
+    <p>These URLs return JSON responses:</p>
+    <ul>
+        <li><a href="/products">List of Products</a></li>
+        <li><a href="/cart">Contents of Cart</a></li>
+    </ul>
 
-        <p></p>
+    <p></p>
 
-        <form action="/cart" method="post">
-            <fieldset>
-                <legend>This form will add to the cart with a given product id</legend>
-                <ul>
-                    <li>Product: <input type="number" name="productid"></li>
-                    <li>Quantity: <input type="number" name="quantity"></li>
-                    <li><input type="submit"></li>
-                </ul>
-                <input type="hidden" name="update" value="0">
-            </fieldset>
-        </form>
+    <form action="/cart" method="post">
+        <fieldset>
+            <legend>This form will add to the cart with a given product id</legend>
+            <ul>
+                <li>Product: <input type="number" name="productid"></li>
+                <li>Quantity: <input type="number" name="quantity"></li>
+                <li><input type="submit"></li>
+            </ul>
+            <input type="hidden" name="update" value="0">
+        </fieldset>
+    </form>
 
-        <form action="/cart" method="post">
-            <fieldset>
-                <legend>This form will update the cart with a given product id, or remove if quantity=0</legend>
-                <ul>
-                    <li>Product: <input type="number" name="productid"></li>
-                    <li>Quantity: <input type="number" name="quantity"></li>
-                    <li><input type="submit"></li>
-                </ul>
-                <input type="hidden" name="update" value="1">
-            </fieldset>
-        </form>
+    <form action="/cart" method="post">
+        <fieldset>
+            <legend>This form will update the cart with a given product id, or remove if quantity=0</legend>
+            <ul>
+                <li>Product: <input type="number" name="productid"></li>
+                <li>Quantity: <input type="number" name="quantity"></li>
+                <li><input type="submit"></li>
+            </ul>
+            <input type="hidden" name="update" value="1">
+        </fieldset>
+    </form>
 
-     <div id="message"></div>
+    <div id="message"></div>
 
-    </div>
+    <div id="products"></div>
 
-    <footer class="banner">
-        <p>Copyright &copy; 2019 COMP249 Web Technology</p>
-    </footer>
 
-    <!-- load Javascript -->
-    <script src="/static/js/handlebars-v4.1.2.js"></script>
-    <script src="/static/js/jquery-3.4.0.js"></script>
-    <script src="/static/js/script.js"></script>
+    <script type="text/x-handlebars-template" id="tableTemplate">
+        <table>
+            <thead>
+            <tr>
+                <th>Id</th>
+                <th>Product</th>
+                <th>Price</th>
+            </tr>
+            </thead>
+            <tbody>
+            {{#each array}}
+            <div>
+                <tr id="pro">
+                    <td>{{id}}</td>
+                    <td>{{name}}</td>
+                    <td>{{unit_cost}}</td>
+                </tr>
+            </div>
+
+            {{/each}}
+            </tbody>
+        </table>
+    </script>
+
+</div>
+
+<footer class="banner">
+    <p>Copyright &copy; 2019 COMP249 Web Technology</p>
+</footer>
+
+<!-- load Javascript -->
+<script src="/static/js/handlebars-v4.1.2.js"></script>
+<script src="/static/js/jquery-3.4.0.js"></script>
+<script src="/static/js/script.js"></script>
 
 </body>
 </html>
