--- a/views/index.html
+++ b/views/index.html
@@ -47,8 +47,8 @@
 
     <div id="message"></div>
 
+    <br>
     <div id="products"></div>
-
 
     <script type="text/x-handlebars-template" id="tableTemplate">
         <table>
@@ -61,20 +61,19 @@
             </thead>
             <tbody>
             {{#each array}}
-            <div>
-                <tr id="pro">
-                    <td>{{id}}</td>
-                    <td>{{name}}</td>
-                    <td>{{unit_cost}}</td>
-                </tr>
-            </div>
-
+            <tr id="pro">
+                <td>{{id}}</td>
+                <td>{{name}}</td>
+                <td>{{unit_cost}}</td>
+            </tr>
             {{/each}}
             </tbody>
         </table>
     </script>
-
+    <br>
+    <div id="info"></div>
 </div>
+
 
 <footer class="banner">
     <p>Copyright &copy; 2019 COMP249 Web Technology</p>
@@ -87,5 +86,20 @@
 
 </body>
 </html>
+
+<style>
+table {
+  width: 100%;
+}
+
+table, th, td {
+  border: 2px solid black;
+  border-collapse: collapse;
+}
+
+th, td {
+  padding: 2px 4px;
+}
+}</style>
 
 
