refactored table click

--- a/views/index.html
+++ b/views/index.html
@@ -61,7 +61,7 @@
             </thead>
             <tbody>
             {{#each array}}
-            <tr id="pro">
+            <tr class="pro">
                 <td>{{id}}</td>
                 <td>{{name}}</td>
                 <td>{{unit_cost}}</td>
