--- a/views/index.html
+++ b/views/index.html
@@ -107,6 +107,12 @@
         padding: 2px 4px;
     }
 
-    }</style>
+    img {
+        border: 10px solid blue;
+        border-radius: 4px;
+        padding: 5px;
+        width: 500px;
+    }
+</style>
 
 
