--- a/static/css/style.css
+++ b/static/css/style.css
@@ -50,6 +50,10 @@ th, td {
     padding: 2px 4px;
 }
 
+td:hover {
+    text-decoration:underline
+}
+
 img {
     border: 10px solid blue;
     border-radius: 4px;
