--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,42 +1,28 @@
-html {
-    background-color: blue;
+* {
+    font-family: Courier
 }
 
 body {
     margin: 0;
 }
 
-.content {
-    width: 80%;
-    margin: auto;
-    margin-bottom: 0;
-    background-color: pink;
-    padding: 20px;
-    overflow: auto;
-}
-
-#message {
-    width: 60%;
-    margin: auto;
-    padding: 10px;
-    background-color: white;
-    text-align: center;
-    font-size: 20pt;
-    font-family: fixed;
-}
 
 .banner {
     font-family: cursive, sans-serif;
     text-align: center;
-    background-color: #ffcc33;
+    background-color: lightskyblue;
     margin: 0;
     padding: 10px;
     height: 80px;
+}
 
+#cartDisplay {
+    margin: 20px;
+    padding: 10px;
 }
 
 table {
-    width: 40%;
+    width: 60%;
     margin: 20px;
     padding: 20px;
 }
@@ -51,30 +37,31 @@ th, td {
 }
 
 td:hover {
-    text-decoration:underline;
+    text-decoration: underline;
 }
 
 img {
-    border: 10px solid blue;
+    border: 10px solid cornflowerblue;
     border-radius: 4px;
     padding: 5px;
     width: 500px;
 }
 
-#info {
-    padding: 20px;
-    max-width: 40%;
-    min-width: 40%;
-    display: block;
-    position: relative;
-    margin-left: 1.4em;
-    float: right;
+.content > div {
+    background: #eee;
+    padding: 1em;
 }
 
-#fullCart table {
-    float: right;
+.content {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 1em;
 }
 
-#products table {
-    float: left;
+.nested1 {
+    display: grid;
+}
+
+.nested2 {
+    display: grid;
 }
