--- a/views/index.html
+++ b/views/index.html
@@ -28,7 +28,7 @@
             </thead>
             <tbody>
             {{#each array}}
-            <tr class="pro">
+            <tr class="productRow">
                 <td hidden>{{id}}</td>
                 <td>{{name}}</td>
                 <td>${{unit_cost}}</td>
