--- a/views/index.html
+++ b/views/index.html
@@ -44,7 +44,7 @@
         <br>
         <img src={{imageUrl}}>
         <br>
-        <button id="remove">Close</button>
+        <button id="close">Close</button>
         <button id="addToCart">Add to / Modify Cart</button>
         <br>
         <br><b>Quantity: </b><input type="number" id="quantity" value="1"> <input type="checkbox"
@@ -55,7 +55,7 @@
             <caption>Total Cost ${{costTotal}}</caption>
             <thead>
             <tr>
-                <th>Name</th>
+                <th>Product</th>
                 <th>Quantity</th>
                 <th>Cost</th>
             </tr>
